--- a/styles/position-page.css
+++ b/styles/position-page.css
@@ -1,1 +1,80 @@
+.navbar {
+	padding-left: 60px;
+	padding-right: 60px;
+	margin-bottom: 1000px;
+	position: fixed;
+	background-color: grey;
+	height:60px;
+	width: 100%;
+}
+.navbar img {
+	height: 50px;
+	margin-top: 5px;
+    margin-bottom: 5px;
+    border-radius: 50%;
+    vertical-align: middle;
+    border: 1px solid black;
+}
+
+.navbar ul{
+	margin-top: 0;
+    list-style-type:none;
+  	display: inline-block;
+}
+
+.navbar li{
+	display: inline-block;
+}
+
+.navbar li::after {
+  content: "|";
+  margin-left: 5px;
+}
+
+.navbar a:hover {
+  color: black;
+}
+
+.background {
+  background: url(../images/outerspace_landscape.jpeg) no-repeat;
+  background-size: cover;
+}
+
+.content {
+  padding-top: 90px;
+  min-width: 1000px;
+}
+
+.dots{
+	border: 10px green dotted;
+	width: 600px;
+	height: 300px;
+	position: relative;
+	margin-top: 150px;
+	margin-left: auto;
+    margin-right: auto;
+}
+
+.spacecat, .spacedog {
+  position: absolute;
+  width: 200px;
+}
+
+.spacecat {
+  top: 90px;
+  left: 200px;
+}
+
+.spacedog {
+  bottom: -70px;
+  right: 200px;
+}
+
+
+
+
+
+
+
+
 
